feat(component): 重构组件检索逻辑并增强验证功能
- 引入 ComponentRetriever 检索链路，实现新旧检索方式的无缝切换
- 添加 ComponentFeatureFlags 类统一管理特性开关解析逻辑
- 实现 ComponentRequestConverter 统一转换遗留请求参数为查询对象
- 增强组件验证器，添加 socketPlacements 完整性检查功能
- 优化分段重复逻辑，支持沿轴自动扩展和智能重复计数
- 在 AI 提示中添加组件目录同步状态提醒
- 重构语